name:                hlock
version:             0.1.0.0
synopsis:            Minimalistic X screen locker
description:         This is simple X screen locker inspired by the slock from
                     suckless.org
homepage:            http://github.com/zsedem/hlock
license:             BSD3
license-file:        LICENSE
author:              Zsigmond Ádám Olivér
maintainer:          zsedem@gmail.com
copyright:           Copyright: (c) 2016 Zsigmond Ádám Olivér
build-type:          Simple
cabal-version:       >=1.10

library
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  hs-source-dirs:      src
  exposed-modules:     Graphics.X11.HLock
  build-depends:       base
                     , classy-prelude
                     , time
                     , X11
  default-language:    Haskell2010

executable hlock
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hlock
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zsedem/hlock
