name:                hlock
version:             0.1.0.2
synopsis:            Minimalistic X screen locker
description:         This is simple X screen locker inspired by the slock from
                     suckless.org
homepage:            http://github.com/zsedem/hlock
license:             BSD3
license-file:        LICENSE
author:              Zsigmond Ádám Olivér
maintainer:          zsedem@gmail.com
copyright:           Copyright: (c) 2016 Zsigmond Ádám Olivér
build-type:          Simple
category:            Desktop
cabal-version:       >=1.10
tested-with:         GHC >= 7.8 && < 7.11

library
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Graphics.X11.HLock
                     , HLock
                     , System.Posix.User.Password
  build-depends:       base >=3 && <5
                     , classy-prelude
                     , time
                     , unix
                     , X11
                     , Unixutils-shadow
                     , Unixutils
                     , monad-loops
                     , transformers
  default-language:    Haskell2010

executable hlock
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hlock
  default-language:    Haskell2010

test-suite unit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       AllSpec
                     , HLockSpec
  ghc-options:         -Wall -Werror
  default-extensions:  NoImplicitPrelude
                     , GeneralizedNewtypeDeriving
  main-is:             Test.hs
  build-depends:       base
                     , classy-prelude
                     , hspec
                     , QuickCheck
                     , hlock
                     , mtl
 default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zsedem/hlock
